<resources>

    <!--App Tittle-->
    <string name="app_name">HiddenEye v2</string>

    <!--Home Fragment-->
    <string name="message">send a message</string>
    <string name="howto">Instructions to search</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ligula nisl, gravida vel lectus ut, bibendum tristique justo. Mauris bibendum ut elit vitae varius. Suspendisse euismod purus nec aliquet ultricies. Quisque eget consequat enim, id ultricies tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas nisl nunc, pellentesque nec </string>


    <!--Video Attributes-->
    <string name="col1">videoPath</string>
    <string name="col2">age</string>
    <string name="col3">isCarryingBackpack</string>
    <string name="col4">isCarryingBag</string>
    <string name="col5">lowerBodyClothing</string>
    <string name="col6">lenLowerBodyClothing</string>
    <string name="col7">sleeveLength</string>
    <string name="col8">hairLength</string>
    <string name="col9">isWearingHat</string>
    <string name="col10">gender</string>
    <string name="col11">colorUpperBodyClothing</string>
    <string name="col12">colorLowerBodyClothing</string>

    <!--Bottom Nav Bar-->
    <string name="bottomNav1">Home</string>
    <string name="bottomNav2">Explore</string>
    <string name="bottomNav3">Live Stream</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- SearchView -->
    <string name="search_hint">Search here</string>

    <!-- Card Template -->
    <string name="name">John</string>
    <string name="att1">Score : 0.9382</string>
    <string name="att2">Hair Length : short</string>
    <string name="att3">Gender : Male</string>
    <string name="att4">isWearingHat : True</string>


</resources>