<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.TableActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2,3,4,5,6,7,8,9,10,11,12"
        android:layout_margin="8dp">

        <!-- Define your table rows and columns here -->
        <TableRow>
            <TextView
                android:text="@string/col1"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col2"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col3"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col4"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col5"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col6"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col7"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>
            <TextView
                android:text="@string/col8"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col9"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"
                android:layout_column="1"/>
            <TextView
                android:text="@string/col10"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col11"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

            <TextView
                android:text="@string/col12"
                android:textSize="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_column="1"/>

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </TableLayout>

</HorizontalScrollView>