<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:id="@+id/attributeCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/baseline_play_circle_outline_24" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/display_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                app:shapeAppearanceOverlay="@style/circular"
                app:srcCompat="@drawable/harish"
                app:strokeWidth="5dp"
                app:strokeColor="@color/black"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_alignParentStart="true"/>

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/display_picture"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/face_name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/linearlayout1"
                android:layout_toEndOf="@id/display_picture"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/att1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/att1"
                    android:textColor="@color/grey"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    />

                <TextView
                    android:id="@+id/att2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/att2"
                    android:textColor="@color/grey"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/linearlayout2"
                android:layout_toEndOf="@id/display_picture"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/att3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/att3"
                    android:textColor="@color/grey"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    />

                <TextView
                    android:id="@+id/att4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/att4"
                    android:textColor="@color/grey"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"/>

            </LinearLayout>



        </RelativeLayout>

    </LinearLayout>




            

</androidx.cardview.widget.CardView>