<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Fragments.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/hiddeneyelogo"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:src="@drawable/hiddeneye_logo"
            android:paddingVertical="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chatbox"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/chatbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/edit_text_height"
            android:background="@drawable/chatbox"
            app:layout_constrainedWidth="true"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toStartOf="@+id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            android:isScrollContainer="true"
            app:layout_constraintTop_toBottomOf="@id/hiddeneyelogo"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_send_24"
            app:fabCustomSize="45dp"
            android:layout_margin="4dp"
            app:layout_constraintStart_toEndOf="@+id/chatbox"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hiddeneyelogo"
            app:layout_constraintBottom_toTopOf="@+id/guide"
            android:backgroundTint="@color/purple_500"
            app:tint="@color/white"
            />
        <TextView
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chatbox"
            android:paddingVertical="@dimen/activity_vertical_margin"
            style="@style/TextAppearance.AppCompat.Title"/>
        <TextView
            android:id="@+id/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loremipsum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide"
            android:padding="@dimen/activity_vertical_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>